# MeshtasticSNRTool

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build_log.txt  handover.md  meshtastic-lna-architecture.md
app/: package-lock.json  package.json
app/src/: App.css  App.tsx  types.ts
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs
app/src/components/: ConfigForm.tsx  Dashboard.tsx  ResultModal.tsx  SignalChart.tsx
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: config.rs  engine.rs  lib.rs  logging.rs  transport.rs
core/src/transport/: ip.rs  serial.rs
