[package]
name = "msnr-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = "0.4.42"
csv = "1.4.0"
meshtastic = "0.1.8"
meshtastic_protobufs = "2.7.8"
prost = "0.14.1"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serialport = "4.8.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-serial = "5.4.5"
ed25519-dalek = "2.1.0"
base64 = "0.22.0"
